--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="./style/style.css"  >
-    <link rel="stylesheet" href="./style/responsive.css"  >
+    <link rel="stylesheet" type="text/css" href="/styles/style.css">
+    <link rel="stylesheet" type="text/css" href="/styles/responsive.css">
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
-    <script type="text/javascript" src="./script/script.js"></script>
+    <script type="text/javascript" src="/script/script.js"></script>
 </head>
 <body>
     <header>
@@ -164,7 +164,7 @@
                         <h3>Profile</h2>
     
                         <figure>
-                            <img class="profile-pic" src="./image/IMG20230116110046.jpg">
+                            <img class="profile-pic" src="https://storage.googleapis.com/kaisar-submission-bucket/frontend-submission-pict/IMG20230116110046.jpg">
     
                         </figure>
                     </div>
